fix overflow link issue on icons

--- a/components/pages/LandingPage/LandingComponents/Supporting/SupportingElement/SupportingElement.module.css
+++ b/components/pages/LandingPage/LandingComponents/Supporting/SupportingElement/SupportingElement.module.css
@@ -28,6 +28,7 @@ html[class~=dark] .item {
   height: 54px;
   justify-content: center;
   text-align: center;
+  overflow: hidden;
 }
 
 .icon img {
